--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-normalize": "^0.4.4",
     "react-scripts": "2.1.1"
   },
   "scripts": {
